@@ -1,3 +1,13 @@
+2007-09-13  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR bootstrap/33418
+	* configure.ac (ld_vers): Support Linux linker.
+	* configure: Regenerated.
+
+2007-09-13  Seongbae Park <seongbae.park@gmail.com>
+
+	* common.opt (femit-class-debug-always): Turn off by default.
+
 2007-09-12  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.c (machine_function): Add vararg_a7_copy.
