@@ -1,3 +1,8 @@
+2007-09-15  Alan Modra  <amodra@bigpond.net.au>
+
+	* configure.in: Correct makeinfo version check.
+	* configure: Regenerate.
+
 2007-09-12  David Daney  <ddaney@avtrex.com>
 
 	* configure.ac: Remove mips64*-*-linux* noconfigdirs section, thus
